change gpsies shortcodes to ssl

--- a/layouts/shortcodes/gpsies_auth.html
+++ b/layouts/shortcodes/gpsies_auth.html
@@ -1,4 +1,4 @@
 <div>
-<iframe src="http://www.gpsies.com/mapOnly.do?fileId={{ index .Params 0 }}&authkey={{index .Params 1}}" width="600" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+<iframe src="https://www.gpsies.com/mapOnly.do?fileId={{ index .Params 0 }}&authkey={{index .Params 1}}" width="600" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 </iframe>
 </div>
